--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,13 @@ body {
   font-family: 'Noto Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.6rem;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 code {
